# peg

./: .gitignore  CMakeLists.txt  Makefile
src/: compile.c  compile2.c  leg.c  peg.c  peg.peg  peg.peg-c  tree.c  tree.h
